--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,33 @@ body {
   margin: 1em;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    background-color: #f9f9f7;
+}
+
+th {
+  background-color: #d4dce6;
+  font-weight: unset;
+  padding: 0.2em 0.5em;
+  text-align: center;
+}
+
+td.age {
+  font-size: 120%;
+  text-align: center;
+}
+
+td div {
+/*  background-color: red;*/
+  vertical-align: center;
+}
+
+td img {
+  height: 1.5em;
+  margin: 0.3em;
+}
+
+.worst {
+  color: #e05a47;
 }
 
 a {
