--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,43 +1,30 @@
-:root{
-  --bg-color: #FFB3B7;
-  --title-color: #505D75;
-}
-
 html,
 body {
   height: 100%;
   width: 100%;
   padding: 0em;
   margin: 0em;
-  /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
-    font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', sans-serif;
   background-color: #f9f9f7;
 }
 body{
   background-color: var(--bg-color);
+  color: var(--text-color);
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab&family=Roboto:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
 
-
-.title{
-  font-family: 'Roboto Slab', serif;
-}
 
 header {
   background-color: var(--bg-color);
   padding: 1em;
-  color:var(--title-color); /*#6B81A0;*/
+  color:var(--title-color);
 }
 
 article {
   padding: 1em;
 }
 
-header h1 {
-  margin: 0;
-}
+
 
 table {
   border-spacing: 5px;
