Ajout page d'information sur le simulateur

--- a/pages/form/form.module.scss
+++ b/pages/form/form.module.scss
@@ -5,37 +5,11 @@
     align-items: stretch;
     text-align: left;
 
-    .modalButton{
-        border: none;
-        font: inherit;
-        cursor: pointer;
-        text-align: left;
-        background-color: transparent;
-        
-        display: inline-block;
-        padding: 5px;
-        color: var(--gray-dark-color);
-        text-decoration: underline;
-        margin-top: 15px;
-    }
-
-
     .submitButton{
-        border: none;
-        font: inherit;
-        cursor: pointer;
-
         margin-top: 40px;
-        padding: 10px 15px;
-        background-color: var(--gray-dark-color);
-        color: white;
-        font-weight: 500;
-
-        transition: background-color .3s;
-
-        &:focus,&:hover{
-        background-color: var(--gray-light-color);
-        }
+    }    
+    .informationButton{
+        margin-top: 15px;
     }
 }
 
@@ -75,7 +49,18 @@
         font-weight: 500;
         max-width: 300px;
     }
+}
 
+.informationPage{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    line-height: 130%;
+
+    p,li,ul{
+        margin: .5rem 0;
+    }
 }
 
 @media screen and (max-width: 640px) {
@@ -94,7 +79,7 @@
     }
 
     .formElement{
-        .modalButton{
+        .informationButton{
             text-align: center;
         }
     }
