--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -22,9 +22,10 @@ body{
   width: fit-content;
   margin: 0 auto;
   padding: 60px 80px;
-  background: white;
+  background: rgb(235, 234, 234);
 
   box-shadow: 0px 5px 15px -10px rgba(black,0.5);
+  border-radius: 4px;
 }
 
 @media screen and (max-width: 640px) {
