--- a/styles/form.module.scss
+++ b/styles/form.module.scss
@@ -3,6 +3,11 @@
     padding: 10px 10px;
 }
 
+.SharedIcon {
+    display: flex;
+    padding-top: 25px;
+    justify-content: center;
+}
 .formElement{
     display: flex;
     flex-direction: column;
