--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,13 +1,14 @@
 html,
 body {
-  height: 100%;
-  width: 100%;
   padding: 0em;
   margin: 0em;
   font-family: 'Roboto', sans-serif;
   background-color: #f9f9f7;
 }
 body{
+  height: 100%;
+  width: 100%;
+  padding: 30px 0 50px 0;
   background-color: var(--bg-color);
   color: var(--gray-dark-color);
 }
