--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -6,8 +6,9 @@ body {
   background-color: #f9f9f7;
 }
 body{
-  height: 100%;
-  width: 100%;
+  min-width: 100vw;
+  min-height: 100vh;
+  overflow-x: hidden;
   padding: 30px 0 50px 0;
   background-color: var(--bg-color);
   color: var(--gray-dark-color);
