--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -44,6 +44,18 @@ body{
   
 }
 
+.twitter-div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 25px;
+  gap: 25px;
+  color: black;
+  font-weight: bold;
+  font-size: large;
+  text-decoration: underline;
+}
+
 
 // header {
 //   background-color: var(--bg-color);
