--- a/components/TwitterButton.module.scss
+++ b/components/TwitterButton.module.scss
@@ -2,6 +2,11 @@
     display: flex;
     align-items: center;
     column-gap: 1rem;
+    flex-wrap: wrap;
+
+    pre {
+        white-space: pre-wrap;
+    }
 }
 
 .SharedText {
