--- a/styles/form.module.scss
+++ b/styles/form.module.scss
@@ -23,6 +23,23 @@
     }
 }
 
+.inputElement, .fieldsetElement{
+    margin-top: 5px;
+    margin-bottom: 15px;
+}
+
+.fieldsetElement{
+    margin-top: 10px;
+    padding: 10px;
+    padding-bottom: 20px;
+    legend {
+        font-weight: 500;
+    }
+    label{
+        margin-right: 10px;
+    }
+}
+
 .inputElement{
     display: grid;
     grid-template-columns: 1fr auto;
@@ -30,9 +47,6 @@
     gap: 20px;
 
     align-items: flex-start;
-
-    margin-top: 5px;
-    margin-bottom: 15px;
 
     &:focus-within{
         label{
@@ -59,6 +73,10 @@
         font-weight: 500;
         max-width: 300px;
     }
+}
+
+.fieldsetElement {
+    display: block;
 }
 
 .informationPage{
