--- a/components/TwitterButton.module.scss
+++ b/components/TwitterButton.module.scss
@@ -1,16 +1,70 @@
-.SharedButton {
-    display: flex;
-    align-items: center;
-    column-gap: 1rem;
-    flex-wrap: wrap;
+.mockupTweetWrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: flex-start;
+}
 
-    pre {
-        white-space: pre-wrap;
+.title{
+
+}
+
+.shareButton{
+    align-self: flex-end;
+    display: inline-flex;
+    align-items: center;
+    background-color: rgb(29, 155, 240);
+    min-height: 36px;
+    border-radius: 9999px;
+    font-size: 15px;
+    font-weight:700;
+    padding: 0 1.6rem;
+    color:white;
+    &:hover{
+        background-color: rgb(29, 140, 216);
     }
 }
 
-.SharedText {
-    font-weight: 600;
-    padding-bottom: 10px;
-    font-size: 20px;
+
+.mockupTweet {
+  display: flex;
+  align-items: flex-start;
+  gap: 1rem;
+  margin: 0 auto;
+  max-width: 40rem;
+  background: white;
+  box-shadow: 0 1rem 2rem 0rem rgba(0, 0, 0, 0.05);
+  padding: 2rem;
+  border-radius: 0.5rem;
+}
+.mockupTweetContent {
+  color: rgb(15, 20, 25);
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif;
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 20px;
+  overflow-wrap: break-word;
+  white-space: pre-wrap;
+  p {
+    margin: 0;
+  }
+  .link {
+    color: rgb(29, 155, 240);
+  }
+
+  .profileRow {
+    display: flex;
+  }
+  .profileName {
+    color: rgb(15, 20, 25);
+    font-weight: 700;
+    margin-right: .5rem;
+  }
+  .profileHandle {
+    color: rgb(83, 100, 113);
+  }
+  .header{
+    margin-bottom: .5rem;
+  }
 }
