--- a/components/TwitterButton.module.scss
+++ b/components/TwitterButton.module.scss
@@ -1,11 +1,69 @@
 .mockupTweetWrapper {
+  position: relative;
   display: flex;
+  width: fit-content;
+  margin: 0 auto;
+  margin-top: 10rem;
   flex-direction: column;
   gap: 1rem;
   align-items: flex-start;
+  z-index: 1;
+
+  svg{
+    position: absolute;
+  
+    font-size: 20rem;
+    z-index: -1;
+    color: var(--underline-color);
+  }
+
+  .topLeft{
+    left: -20%;
+    top: -5%;
+    transform:  rotate(180deg);
+
+
+  }
+  .botRight{
+    bottom: -10%;
+    right: -30%;
+    // transform: translate(-50%,-50%);
+
+  }
 }
 
 .title{
+  text-align: center;
+
+  // max-width: 30rem;
+  // max-width: 30rem;
+  font-size: 2.8rem;
+    position: relative;
+    display: inline-block;
+    font-family: "Roboto Slab", serif;
+    font-weight: 700;
+    margin: 0 auto;
+    margin-bottom: 2rem;
+    z-index: 1;
+    padding: 0 10px;
+    color: var(--gray-dark-color);
+
+    span{
+    // background-size: 1px 1rem;
+    // box-shadow: inset 0 0.5rem transparent, inset 0 -1.5rem var(--underline-color);
+    // display: inline;
+    }
+    // &:after{
+    //   content: '';
+    //   position: absolute;
+    //   left: 0;
+    //   top: 60%;
+    //   background-color: var(--underline-color);
+    //   width: 100%;
+    //   height: 15px;
+    //   height: 15px;
+    //   z-index: -1;
+    // }
 
 }
 
@@ -33,7 +91,7 @@
   margin: 0 auto;
   max-width: 40rem;
   background: white;
-  box-shadow: 0 1rem 2rem 0rem rgba(0, 0, 0, 0.05);
+  box-shadow: 0 1rem 2rem 0rem rgba(0, 0, 0, 0.1);
   padding: 2rem;
   border-radius: 0.5rem;
 }
