--- a/styles/form.module.scss
+++ b/styles/form.module.scss
@@ -83,12 +83,17 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: left;
 
     line-height: 130%;
 
+    p{
+        width: 100%;
+    }
     p,li,ul{
         margin: .5rem 0;
     }
+
 }
 
 
