Mise en forme résumé + partage Twitter

--- a/components/Summary.module.scss
+++ b/components/Summary.module.scss
@@ -1,5 +1,11 @@
 .Summary {
   font-size: 18px;
+  p{
+    margin: 0;
+  }
+  .firstSentence{
+    margin-bottom: 2rem;
+  }
   strong {
     font-weight: 500;
 
