--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -1,6 +1,6 @@
 :root{
   --bg-color: #FFB3B7;
-  --underline-color: #ffcbcd;
+  --underline-color: #ffdadb;
   --highlight-color: #c24b51;
   --gray-light-color: #6f7e9b;
   --gray-dark-color: #505D75;
