--- a/components/TwitterButton.module.scss
+++ b/components/TwitterButton.module.scss
@@ -9,80 +9,75 @@
   align-items: flex-start;
   z-index: 1;
 
-  svg{
+  svg {
     position: absolute;
-  
+
     font-size: 20rem;
     z-index: -1;
-    color: var(--underline-color);
+    color: rgba(255, 255, 255, 0.3);
   }
 
-  .topLeft{
+  .topLeft {
     left: -20%;
-    top: -5%;
-    transform:  rotate(180deg);
-
-
+    top: -10%;
+    transform: rotate(180deg);
   }
-  .botRight{
+  .botRight {
     bottom: -10%;
     right: -30%;
     // transform: translate(-50%,-50%);
-
   }
 }
 
-.title{
+.title {
   text-align: center;
 
   // max-width: 30rem;
   // max-width: 30rem;
   font-size: 2.8rem;
-    position: relative;
-    display: inline-block;
-    font-family: "Roboto Slab", serif;
-    font-weight: 700;
-    margin: 0 auto;
-    margin-bottom: 2rem;
-    z-index: 1;
-    padding: 0 10px;
-    color: var(--gray-dark-color);
+  position: relative;
+  display: inline-block;
+  font-family: "Roboto Slab", serif;
+  font-weight: 700;
+  margin: 0 auto;
+  margin-bottom: 2rem;
+  z-index: 1;
+  padding: 0 10px;
+  color: var(--gray-dark-color);
 
-    span{
+  span {
     // background-size: 1px 1rem;
     // box-shadow: inset 0 0.5rem transparent, inset 0 -1.5rem var(--underline-color);
     // display: inline;
-    }
-    // &:after{
-    //   content: '';
-    //   position: absolute;
-    //   left: 0;
-    //   top: 60%;
-    //   background-color: var(--underline-color);
-    //   width: 100%;
-    //   height: 15px;
-    //   height: 15px;
-    //   z-index: -1;
-    // }
-
+  }
+  // &:after{
+  //   content: '';
+  //   position: absolute;
+  //   left: 0;
+  //   top: 60%;
+  //   background-color: var(--underline-color);
+  //   width: 100%;
+  //   height: 15px;
+  //   height: 15px;
+  //   z-index: -1;
+  // }
 }
 
-.shareButton{
-    align-self: flex-end;
-    display: inline-flex;
-    align-items: center;
-    background-color: rgb(29, 155, 240);
-    min-height: 36px;
-    border-radius: 9999px;
-    font-size: 15px;
-    font-weight:700;
-    padding: 0 1.6rem;
-    color:white;
-    &:hover{
-        background-color: rgb(29, 140, 216);
-    }
+.shareButton {
+  align-self: flex-end;
+  display: inline-flex;
+  align-items: center;
+  background-color: rgb(29, 155, 240);
+  min-height: 36px;
+  border-radius: 9999px;
+  font-size: 15px;
+  font-weight: 700;
+  padding: 0 1.6rem;
+  color: white;
+  &:hover {
+    background-color: rgb(29, 140, 216);
+  }
 }
-
 
 .mockupTweet {
   display: flex;
@@ -117,12 +112,12 @@
   .profileName {
     color: rgb(15, 20, 25);
     font-weight: 700;
-    margin-right: .5rem;
+    margin-right: 0.5rem;
   }
   .profileHandle {
     color: rgb(83, 100, 113);
   }
-  .header{
-    margin-bottom: .5rem;
+  .header {
+    margin-bottom: 0.5rem;
   }
 }
