--- a/components/ProfileCard.module.scss
+++ b/components/ProfileCard.module.scss
@@ -1,17 +1,65 @@
-.Container {
-    display: flex;
-    column-gap: 25px;
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  margin-top: 3rem;
+
+  .Title {
+    font-size: 2.8rem;
+    position: relative;
+    font-family: "Roboto Slab", serif;
+    font-weight: 700;
+  }
 }
 
-.Name {
+.ProfileCard {
+  max-width: 70rem;
+  position: relative;
+  border-radius: 1rem;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  gap: 3rem;
+  font-size: 18px;
+  padding: 5rem;
+  padding-top: 6rem;
+  margin-top: 6rem;
+  margin-bottom: 3rem;
+  background: white;
+  box-shadow: 0 1rem 2rem 0rem rgba(0, 0, 0, 0.1);
+
+  .ProfileCardHeader {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 auto;
+    max-width: 50rem;
+    border-bottom: solid 1px var(--underline-color);
+    padding-bottom: 2rem;
+  }
+
+  .Name {
     font-size: 30px;
     font-weight: bold;
+  }
+
+  p {
+    margin: 0.5rem;
+  }
+}
+.selectedPicto {
+  position: absolute;
+  top: 0%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 100000px;
+  outline: solid 1rem var(--underline-color);
+  width: 10rem;
 }
 
-.InformationBox {
+.ProfileCardContent{
     display: flex;
     flex-direction: column;
-    row-gap: 10px;
-    font-size: 18px;
-    padding-bottom: 25px;
+    align-items: center;
 }
