--- a/styles/form.module.scss
+++ b/styles/form.module.scss
@@ -75,6 +75,12 @@
     }
 }
 
+.Details{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .fieldsetElement {
     display: block;
 }
