--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,24 +1,27 @@
 html {
   /* 1rem = 10px */
   font-size: 62.5%;
+  // width: 100%;
+  // height: 100%;
+
 }
 body {
   font-size: 1.6rem;
-  position: absolute;
+  position: relative;
 
 }
 
 html,
 body {
+  overflow-x: hidden;
   padding: 0em;
   margin: 0em;
   font-family: 'Roboto', sans-serif;
   background-color: white;
 }
 body{
-  min-width: 100vw;
-  min-height: 100vh;
-  overflow-x: hidden;
+
+  // overflow-x: hidden;
   padding: 30px 0 50px 0;
   padding-bottom: 15rem;
 
