--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -54,7 +54,7 @@
   
   display: inline-block;
   padding: 5px;
-  color: var(--gray-dark-color);
+  color: var(--gray-light-color);
   text-decoration: underline;
 }
 
