--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -2,9 +2,8 @@ html {
   /* 1rem = 10px */
   font-size: 62.5%;
   // width: 100%;
-  // height: 100%;
-
 }
+
 body {
   font-size: 1.6rem;
   position: relative;
@@ -13,6 +12,7 @@ body {
 
 html,
 body {
+  min-height: 100vh;
   overflow-x: hidden;
   padding: 0em;
   margin: 0em;
@@ -44,8 +44,8 @@ body{
     padding: 60px 80px;
     background: white;
   
-    box-shadow: 0px 5px 15px -10px rgba(black,0.5);
-    border-radius: 4px;
+    box-shadow: 0 1rem 2rem 0rem rgba(0, 0, 0, 0.1);
+    border-radius: 1rem;
   }
 }
 
