Correction affichage tableau

--- a/components/Cell.module.scss
+++ b/components/Cell.module.scss
@@ -1,21 +1,25 @@
-
 $border: solid 1px rgb(214, 223, 230);
 .RedMark {
-    color: red;
+  color: red;
 }
 
 .GreenMark {
-    color: Green;
+  color: Green;
 }
 
 .Box {
-    background-color: white;
-    padding: 10px 10px;
-    border: $border;
+  background-color: white;
+  padding: 10px 10px;
+  border: $border;
+  div {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+  }
 }
 
 .BoxCenter {
-    background-color: white;
-    text-align: center;
-    border: $border;
+  background-color: white;
+  text-align: center;
+  border: $border;
 }
