--- a/components/TwitterButton.module.scss
+++ b/components/TwitterButton.module.scss
@@ -99,6 +99,11 @@
   line-height: 20px;
   overflow-wrap: break-word;
   white-space: pre-wrap;
+  .contentWrapper{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
   p {
     margin: 0;
   }
