--- a/components/ProfileCard.module.scss
+++ b/components/ProfileCard.module.scss
@@ -48,6 +48,17 @@
     margin: 0.5rem;
   }
 }
+
+@media screen and (max-width: 640px) {
+  .wrapper{
+    margin-top: 0;
+  }
+  .ProfileCard{
+    padding: 3rem;
+    padding-top: 6rem;
+  }
+}
+
 .selectedPicto {
   position: absolute;
   top: 0%;
