Warning si début de carrière avant 16 ans

--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -2,6 +2,7 @@
   --bg-color: #FFB3B7;
   --underline-color: #ffdadb;
   --highlight-color: #c24b51;
+  --highlight-light-color: #c24b511c;
   --gray-light-color: #6f7e9b;
   --gray-dark-color: #505D75;
   --text-color: #262e3b;
