--- a/styles/form.module.scss
+++ b/styles/form.module.scss
@@ -24,8 +24,24 @@
 }
 
 .inputElement, .fieldsetElement{
-    margin-top: 5px;
-    margin-bottom: 15px;
+    margin-top: 15px;
+    margin-bottom: 5px;
+}
+
+.warning{
+    margin: 1rem 0;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    padding: 1rem;
+    border-radius: .5rem;
+    background-color: var(--highlight-light-color);
+
+    color: var(--highlight-color);
+    svg{
+        font-size: 2rem;
+    }
+
 }
 
 .fieldsetElement{
